--- a/assets/sass/components/_index.scss
+++ b/assets/sass/components/_index.scss
@@ -4,5 +4,8 @@
 @forward "buttons";
 @forward "location";
 @forward "cards";
-@forward "navs";
+@forward "navigations";
+@forward "like";
 @forward "steps-list";
+
+@forward "menu-option";
