--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -5,7 +5,9 @@
  * HEADER
  * -------------------------------------------------------------------------- */
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   display: flex;
   align-items: center;
   padding: token.$header-padding;
