--- a/assets/sass/components/_menu-option.scss
+++ b/assets/sass/components/_menu-option.scss
@@ -13,12 +13,13 @@
 $_icon-size: calc(card.$title-font-size * 1.125);
 $_padding-block: var.$space-small;
 $_padding-inline: var.$space-medium;
-$_checkbox-max-width: 69px;
+$_card-max-height: 69px;
 
 .menu-option {
   @extend .card;
   display: grid;
   grid-template-columns: 1fr auto auto;
+  max-height: $_card-max-height;
 
   cursor: pointer;
 
@@ -56,7 +57,7 @@ $_checkbox-max-width: 69px;
     }
     background-color: card.$accent-color;
     color: card.$accent-color-foreground;
-    width: $_checkbox-max-width;
+    width: $_card-max-height;
     max-width: 0;
     transition: max-width 150ms ease-in-out;
 
@@ -75,7 +76,7 @@ $_checkbox-max-width: 69px;
 
   // Active state
   & > input:checked ~ .menu-option__checkbox {
-    max-width: $_checkbox-max-width;
+    max-width: $_card-max-height;
 
     i {
       opacity: 1;
