--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,16 @@ h4 {
   font-weight: 500;
 }
 .card input:where([type=checkbox], [type=radio]), .menu-option input:where([type=checkbox], [type=radio]) {
-  display: none;
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
 }
 .card-content {
   display: grid;
@@ -414,7 +423,6 @@ h4 {
 .menu-option {
   display: grid;
   grid-template-columns: 1fr auto auto;
-  max-height: 69px;
   cursor: pointer;
 }
 .menu-option__description, .menu-option__price {
