--- a/assets/sass/components/_cards.scss
+++ b/assets/sass/components/_cards.scss
@@ -52,7 +52,16 @@ $accent-color-foreground: var.$clr-neutral-100 !default;
   // Checkbox
   // hide the checkbox/radio
   input:where([type="checkbox"], [type="radio"]) {
-    display: none;
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px) !important;
+    -webkit-clip-path: inset(50%) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+    white-space: nowrap !important;
   }
 
   &-content {
