--- a/assets/sass/components/_like.scss
+++ b/assets/sass/components/_like.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mixin;
-@use "../abstracts/animation" as animation;
+@use "../abstracts/animations" as animation;
 
 .like {
   display: grid;
