--- a/assets/sass/components/_menu-option.scss
+++ b/assets/sass/components/_menu-option.scss
@@ -1,7 +1,7 @@
 @use "./cards" as card;
 @use "../abstracts/variables" as var;
 @use "../abstracts/mixins" as mixin;
-@use "../abstracts/animation" as animation;
+@use "../abstracts/animations" as animation;
 
 /**
  * Menu Item
