--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,13 +266,13 @@ h4 {
 .card img, .menu-option img {
   width: 100%;
   object-fit: cover;
-  aspect-ratio: 2;
+  aspect-ratio: 400/200;
 }
 @media screen and (min-width: 1024px) {
   .card img, .menu-option img {
     width: 100%;
     object-fit: cover;
-    aspect-ratio: 2.5;
+    aspect-ratio: 500/200;
   }
 }
 .card :where(h1, h2, h3, h4), .menu-option :where(h1, h2, h3, h4) {
@@ -413,6 +413,77 @@ h4 {
   flex-shrink: 0;
 }
 
+.loader {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  display: grid;
+  place-content: center;
+  pointer-events: none;
+  opacity: 1;
+  background-color: white;
+  backdrop-filter: blur(5px);
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #353535;
+  font-family: "Shrikhand", cursive;
+  animation: 300ms reveal 5s ease-out forwards;
+}
+@keyframes reveal {
+  100% {
+    opacity: 0;
+  }
+}
+.loader__content {
+  position: relative;
+  width: min-content;
+  aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 100vmax;
+  padding: 1.5rem;
+  font-size: 2rem;
+}
+.loader__content span {
+  background: linear-gradient(to bottom, #ff79da, #9356dc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.loader__content::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 1.5rem 0 0;
+  background: linear-gradient(to right, #ff79da, #9356dc);
+  filter: blur(1.5rem);
+  opacity: 0.85;
+  border-radius: inherit;
+  animation: 1s spin 0s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    scale: 1;
+  }
+  50% {
+    scale: 1.5;
+  }
+  100% {
+    scale: 1;
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes beat {
+  50% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /**
  * Menu Item
  * @extends .card
