--- a/assets/sass/components/_menu-option.scss
+++ b/assets/sass/components/_menu-option.scss
@@ -17,9 +17,7 @@ $_checkbox-max-width: 69px;
 
 .menu-option {
   @extend .card;
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-
+  display: flex;
   cursor: pointer;
 
   &__description,
@@ -31,6 +29,7 @@ $_checkbox-max-width: 69px;
   // Text
   // Generally contains a title and a description
   &__description {
+    flex: 1;
     overflow: hidden;
     white-space: nowrap;
 
