fix loader distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,8 +444,8 @@ h4 {
 }
 .loader__content {
   position: relative;
-  width: min-content;
-  aspect-ratio: 1;
+  width: 100px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
