--- a/assets/sass/components/_loader.scss
+++ b/assets/sass/components/_loader.scss
@@ -25,8 +25,8 @@ $loader-background: var.$clr-neutral-100;
 
   &__content {
     position: relative;
-    width: min-content;
-    aspect-ratio: 1;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
